source/lexer.cpp
/* Generated by re2c 3.1 on Mon Dec 18 01:55:41 2023 */
#line 1 "source/lexer.re"
#line 77 "source/lexer.re"


#include "lexer.h"
#include <iostream>
#include <string>
using namespace std;

void Lexer::tokenize(string s) {
    const char* c_str = s.c_str();
    m_cursor = c_str;
    m_marker = m_cursor;
    m_limit = c_str + s.length();
    while (next_token() != FAILURE) {
        if (m_token.type == IGNORE)
            continue;
        m_q->push(m_token);
    }
}

void Lexer::print_tokens() {
    while (!m_q->empty()) {
        cout << m_q->front().type << m_q->front().value << endl;
        m_q->pop();
    }
}

Result Lexer::next_token() {
    if (m_cursor >= m_limit)
        return FAILURE;
    
    const char *s, *c, *v;
    
#line 37 "source/lexer.cpp"
const char* yyt1;
#line 108 "source/lexer.re"

    
#line 42 "source/lexer.cpp"
{
	char yych;
	yych = *m_cursor;
	switch (yych) {
		case 0x00:
		case '\n':
		case ' ': goto yy1;
		case '!': goto yy4;
		case '"':
			yyt1 = m_cursor;
			goto yy5;
		case '$':
			yyt1 = m_cursor;
			goto yy6;
		case '%': goto yy7;
		case '&': goto yy8;
		case '\'':
			yyt1 = m_cursor;
			goto yy9;
		case '(': goto yy10;
		case ')': goto yy11;
		case '*': goto yy12;
		case '+': goto yy13;
		case '-': goto yy14;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy15;
		case ';': goto yy17;
		case '<': goto yy18;
		case '=': goto yy19;
		case '>': goto yy21;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'd':
		case 'g':
		case 'h':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 'u':
		case 'v':
		case 'x':
		case 'y':
		case 'z':
			yyt1 = m_cursor;
			goto yy22;
		case '[': goto yy25;
		case ']': goto yy26;
		case '^': goto yy27;
		case 'b':
			yyt1 = m_cursor;
			goto yy28;
		case 'c':
			yyt1 = m_cursor;
			goto yy29;
		case 'e':
			yyt1 = m_cursor;
			goto yy30;
		case 'f':
			yyt1 = m_cursor;
			goto yy31;
		case 'i':
			yyt1 = m_cursor;
			goto yy32;
		case 's':
			yyt1 = m_cursor;
			goto yy33;
		case 't':
			yyt1 = m_cursor;
			goto yy34;
		case 'w':
			yyt1 = m_cursor;
			goto yy35;
		case '{': goto yy36;
		case '|': goto yy37;
		case '}': goto yy38;
		default: goto yy2;
	}
yy1:
	++m_cursor;
#line 170 "source/lexer.re"
	{cout << "ignored" << endl;m_token = Token(IGNORE); return SUCCESS;}
#line 164 "source/lexer.cpp"
yy2:
	++m_cursor;
yy3:
#line 169 "source/lexer.re"
	{cout << "failed to match" << endl; return FAILURE;}
#line 170 "source/lexer.cpp"
yy4:
	yych = *++m_cursor;
	switch (yych) {
		case '=': goto yy39;
		default: goto yy3;
	}
yy5:
	yych = *(m_marker = ++m_cursor);
	switch (yych) {
		case '\'': goto yy3;
		default: goto yy41;
	}
yy6:
	yych = *++m_cursor;
	switch (yych) {
		case '(': goto yy45;
		default: goto yy3;
	}
yy7:
	++m_cursor;
#line 184 "source/lexer.re"
	{m_token = Token(MOD_OP); return SUCCESS;}
#line 193 "source/lexer.cpp"
yy8:
	yych = *++m_cursor;
	switch (yych) {
		case '&': goto yy46;
		default: goto yy3;
	}
yy9:
	yych = *(m_marker = ++m_cursor);
	switch (yych) {
		case '"': goto yy3;
		default: goto yy48;
	}
yy10:
	++m_cursor;
#line 197 "source/lexer.re"
	{m_token = Token(OPEN_PAREN); return SUCCESS;}
#line 210 "source/lexer.cpp"
yy11:
	++m_cursor;
#line 198 "source/lexer.re"
	{m_token = Token(CLOSE_PAREN); return SUCCESS;}
#line 215 "source/lexer.cpp"
yy12:
	++m_cursor;
#line 183 "source/lexer.re"
	{m_token = Token(MULT_OP); return SUCCESS;}
#line 220 "source/lexer.cpp"
yy13:
	++m_cursor;
#line 181 "source/lexer.re"
	{m_token = Token(ADD_OP); return SUCCESS;}
#line 225 "source/lexer.cpp"
yy14:
	++m_cursor;
#line 182 "source/lexer.re"
	{m_token = Token(SUB_OP); return SUCCESS;}
#line 230 "source/lexer.cpp"
yy15:
	yych = *++m_cursor;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy15;
		default: goto yy16;
	}
yy16:
#line 175 "source/lexer.re"
	{m_token = Token(INT_V); return SUCCESS;}
#line 249 "source/lexer.cpp"
yy17:
	++m_cursor;
#line 205 "source/lexer.re"
	{m_token = Token(END_STATEMENT); return SUCCESS;}
#line 254 "source/lexer.cpp"
yy18:
	++m_cursor;
#line 191 "source/lexer.re"
	{m_token = Token(LT_CMP); return SUCCESS;}
#line 259 "source/lexer.cpp"
yy19:
	yych = *++m_cursor;
	switch (yych) {
		case '=': goto yy50;
		default: goto yy20;
	}
yy20:
#line 180 "source/lexer.re"
	{m_token = Token(ASSIGN_OP); return SUCCESS;}
#line 269 "source/lexer.cpp"
yy21:
	++m_cursor;
#line 192 "source/lexer.re"
	{m_token = Token(GT_CMP); return SUCCESS;}
#line 274 "source/lexer.cpp"
yy22:
	yych = *++m_cursor;
yy23:
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy22;
		default: goto yy24;
	}
yy24:
	v = yyt1;
#line 206 "source/lexer.re"
	{m_token = Token(VARNAME, string(v, (int) (m_cursor - v))); return SUCCESS;}
#line 348 "source/lexer.cpp"
yy25:
	++m_cursor;
#line 193 "source/lexer.re"
	{m_token = Token(OPEN_BRACKET); return SUCCESS;}
#line 353 "source/lexer.cpp"
yy26:
	++m_cursor;
#line 194 "source/lexer.re"
	{m_token = Token(CLOSE_BRACKET); return SUCCESS;}
#line 358 "source/lexer.cpp"
yy27:
	++m_cursor;
#line 188 "source/lexer.re"
	{m_token = Token(XOR_OP); return SUCCESS;}
#line 363 "source/lexer.cpp"
yy28:
	yych = *++m_cursor;
	switch (yych) {
		case 'o': goto yy51;
		case 'r': goto yy52;
		default: goto yy23;
	}
yy29:
	yych = *++m_cursor;
	switch (yych) {
		case 'm': goto yy53;
		case 'o': goto yy54;
		default: goto yy23;
	}
yy30:
	yych = *++m_cursor;
	switch (yych) {
		case 'l': goto yy55;
		default: goto yy23;
	}
yy31:
	yych = *++m_cursor;
	switch (yych) {
		case 'a': goto yy56;
		case 'o': goto yy57;
		default: goto yy23;
	}
yy32:
	yych = *++m_cursor;
	switch (yych) {
		case 'f': goto yy58;
		case 'n': goto yy60;
		default: goto yy23;
	}
yy33:
	yych = *++m_cursor;
	switch (yych) {
		case 't': goto yy61;
		default: goto yy23;
	}
yy34:
	yych = *++m_cursor;
	switch (yych) {
		case 'r': goto yy62;
		default: goto yy23;
	}
yy35:
	yych = *++m_cursor;
	switch (yych) {
		case 'h': goto yy63;
		default: goto yy23;
	}
yy36:
	++m_cursor;
#line 195 "source/lexer.re"
	{m_token = Token(OPEN_BRACE); return SUCCESS;}
#line 420 "source/lexer.cpp"
yy37:
	yych = *++m_cursor;
	switch (yych) {
		case '|': goto yy64;
		default: goto yy3;
	}
yy38:
	++m_cursor;
#line 196 "source/lexer.re"
	{m_token = Token(CLOSE_BRACE); return SUCCESS;}
#line 431 "source/lexer.cpp"
yy39:
	++m_cursor;
#line 190 "source/lexer.re"
	{m_token = Token(NEQ_CMP); return SUCCESS;}
#line 436 "source/lexer.cpp"
yy40:
	yych = *++m_cursor;
yy41:
	switch (yych) {
		case '"': goto yy43;
		case '\'': goto yy42;
		case '\\': goto yy44;
		default: goto yy40;
	}
yy42:
	m_cursor = m_marker;
	goto yy3;
yy43:
	++m_cursor;
	s = yyt1;
#line 177 "source/lexer.re"
	{m_token = Token(STRING_V, string(s+1, (int) (m_cursor - s) - 2)); return SUCCESS;}
#line 454 "source/lexer.cpp"
yy44:
	yych = *++m_cursor;
	switch (yych) {
		case '\n': goto yy42;
		default: goto yy40;
	}
yy45:
	yych = *++m_cursor;
	switch (yych) {
		case ')': goto yy65;
		default: goto yy45;
	}
yy46:
	++m_cursor;
#line 186 "source/lexer.re"
	{m_token = Token(AND_OP); return SUCCESS;}
#line 471 "source/lexer.cpp"
yy47:
	yych = *++m_cursor;
yy48:
	switch (yych) {
		case '"': goto yy42;
		case '\'': goto yy43;
		case '\\': goto yy49;
		default: goto yy47;
	}
yy49:
	yych = *++m_cursor;
	switch (yych) {
		case '\n': goto yy42;
		default: goto yy47;
	}
yy50:
	++m_cursor;
#line 189 "source/lexer.re"
	{m_token = Token(EQ_CMP); return SUCCESS;}
#line 491 "source/lexer.cpp"
yy51:
	yych = *++m_cursor;
	switch (yych) {
		case 'o': goto yy66;
		default: goto yy23;
	}
yy52:
	yych = *++m_cursor;
	switch (yych) {
		case 'e': goto yy67;
		default: goto yy23;
	}
yy53:
	yych = *++m_cursor;
	switch (yych) {
		case 'd': goto yy68;
		default: goto yy23;
	}
yy54:
	yych = *++m_cursor;
	switch (yych) {
		case 'n': goto yy70;
		default: goto yy23;
	}
yy55:
	yych = *++m_cursor;
	switch (yych) {
		case 's': goto yy71;
		default: goto yy23;
	}
yy56:
	yych = *++m_cursor;
	switch (yych) {
		case 'l': goto yy72;
		default: goto yy23;
	}
yy57:
	yych = *++m_cursor;
	switch (yych) {
		case 'r': goto yy73;
		default: goto yy23;
	}
yy58:
	yych = *++m_cursor;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy22;
		default: goto yy59;
	}
yy59:
#line 199 "source/lexer.re"
	{m_token = Token(IF_KW); return SUCCESS;}
#line 605 "source/lexer.cpp"
yy60:
	yych = *++m_cursor;
	switch (yych) {
		case 't': goto yy75;
		default: goto yy23;
	}
yy61:
	yych = *++m_cursor;
	switch (yych) {
		case 'r': goto yy77;
		default: goto yy23;
	}
yy62:
	yych = *++m_cursor;
	switch (yych) {
		case 'u': goto yy78;
		default: goto yy23;
	}
yy63:
	yych = *++m_cursor;
	switch (yych) {
		case 'i': goto yy79;
		default: goto yy23;
	}
yy64:
	++m_cursor;
#line 187 "source/lexer.re"
	{m_token = Token(OR_OP); return SUCCESS;}
#line 634 "source/lexer.cpp"
yy65:
	++m_cursor;
	c = yyt1;
#line 179 "source/lexer.re"
	{m_token = Token(CMD_V, string(c+2, (int) (m_cursor - c)-3)); return SUCCESS;}
#line 640 "source/lexer.cpp"
yy66:
	yych = *++m_cursor;
	switch (yych) {
		case 'l': goto yy80;
		default: goto yy23;
	}
yy67:
	yych = *++m_cursor;
	switch (yych) {
		case 'a': goto yy82;
		default: goto yy23;
	}
yy68:
	yych = *++m_cursor;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy22;
		default: goto yy69;
	}
yy69:
#line 178 "source/lexer.re"
	{m_token = Token(CMD_T); return SUCCESS;}
#line 724 "source/lexer.cpp"
yy70:
	yych = *++m_cursor;
	switch (yych) {
		case 't': goto yy83;
		default: goto yy23;
	}
yy71:
	yych = *++m_cursor;
	switch (yych) {
		case 'e': goto yy84;
		default: goto yy23;
	}
yy72:
	yych = *++m_cursor;
	switch (yych) {
		case 's': goto yy86;
		default: goto yy23;
	}
yy73:
	yych = *++m_cursor;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy22;
		default: goto yy74;
	}
yy74:
#line 202 "source/lexer.re"
	{m_token = Token(FOR_KW); return SUCCESS;}
#line 814 "source/lexer.cpp"
yy75:
	yych = *++m_cursor;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy22;
		default: goto yy76;
	}
yy76:
#line 174 "source/lexer.re"
	{m_token = Token(INT_T); return SUCCESS;}
#line 886 "source/lexer.cpp"
yy77:
	yych = *++m_cursor;
	switch (yych) {
		case 'i': goto yy87;
		default: goto yy23;
	}
yy78:
	yych = *++m_cursor;
	switch (yych) {
		case 'e': goto yy88;
		default: goto yy23;
	}
yy79:
	yych = *++m_cursor;
	switch (yych) {
		case 'l': goto yy90;
		default: goto yy23;
	}
yy80:
	yych = *++m_cursor;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy22;
		default: goto yy81;
	}
yy81:
#line 171 "source/lexer.re"
	{m_token = Token(BOOL_T); return SUCCESS;}
#line 976 "source/lexer.cpp"
yy82:
	yych = *++m_cursor;
	switch (yych) {
		case 'k': goto yy91;
		default: goto yy23;
	}
yy83:
	yych = *++m_cursor;
	switch (yych) {
		case 'i': goto yy93;
		default: goto yy23;
	}
yy84:
	yych = *++m_cursor;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy22;
		default: goto yy85;
	}
yy85:
#line 200 "source/lexer.re"
	{m_token = Token(ELSE_KW); return SUCCESS;}
#line 1060 "source/lexer.cpp"
yy86:
	yych = *++m_cursor;
	switch (yych) {
		case 'e': goto yy94;
		default: goto yy23;
	}
yy87:
	yych = *++m_cursor;
	switch (yych) {
		case 'n': goto yy96;
		default: goto yy23;
	}
yy88:
	yych = *++m_cursor;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy22;
		default: goto yy89;
	}
yy89:
#line 172 "source/lexer.re"
	{m_token = Token(TRUE_V); return SUCCESS;}
#line 1144 "source/lexer.cpp"
yy90:
	yych = *++m_cursor;
	switch (yych) {
		case 'e': goto yy97;
		default: goto yy23;
	}
yy91:
	yych = *++m_cursor;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy22;
		default: goto yy92;
	}
yy92:
#line 203 "source/lexer.re"
	{m_token = Token(BREAK_KW); return SUCCESS;}
#line 1222 "source/lexer.cpp"
yy93:
	yych = *++m_cursor;
	switch (yych) {
		case 'n': goto yy99;
		default: goto yy23;
	}
yy94:
	yych = *++m_cursor;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy22;
		default: goto yy95;
	}
yy95:
#line 173 "source/lexer.re"
	{m_token = Token(FALSE_V); return SUCCESS;}
#line 1300 "source/lexer.cpp"
yy96:
	yych = *++m_cursor;
	switch (yych) {
		case 'g': goto yy100;
		default: goto yy23;
	}
yy97:
	yych = *++m_cursor;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy22;
		default: goto yy98;
	}
yy98:
#line 201 "source/lexer.re"
	{m_token = Token(WHILE_KW); return SUCCESS;}
#line 1378 "source/lexer.cpp"
yy99:
	yych = *++m_cursor;
	switch (yych) {
		case 'u': goto yy102;
